--- a/landing_page/styles.css
+++ b/landing_page/styles.css
@@ -11,7 +11,14 @@ body {
     font-family: sans-serif;
 }
 
-
+.nav-login{
+    color: black;
+    border: 2px solid !important;
+}
+.nav-login:hover{
+    color: #fff !important;
+    border: 2px solid !important;
+}
 .hero_back {
   
     background-image: url(/images/back.png);
@@ -71,7 +78,7 @@ body {
     width: 40%;
 }
 .dog_reviews{
-    margin: 0 5%;
+    margin: 0 2%;
 }
 .hero_img {
     width: 50%;
